# C-cko_ukfIG2

01_Prednaska/: 01.c  02.c  CMakeLists.txt  Test.c  Zadanie_01.c  Zadanie_02.c  Zadanie_03.c  Zadanie_04.c  Zadanie_05.c  a.out  smerniky.c
02_Prenaska/: CMakeLists.txt  Celzium.c  Printf_01.c  Retazec_01.c  Retazec_02.c  Smerniky_01.c  Smerniky_02.c  Zadanie_01.c  Zadanie_02.c  Zadanie_03.c  Zadanie_04.c  Zadanie_05.c  Zadanie_06.c  Zadanie_07.c  Zadanie_08.c  a.out  charr.c  isAlpha.c
03_Prednaska/: CMakeLists.txt  Zadanie_01.c  Zadanie_02.c  Zadanie_03.c  Zadanie_04.c  Zadanie_05.c  Zadanie_06.c  a.out  main.c
04_Prednaska/: Zadanie_01.c  vystup_01.txt
05_Prednaska/: Zadanie_01.c  Zadanie_02.c  Zadanie_03.c  Zadanie_04.c
06_Prednaska/: Zadanie_01.c  Zadanie_02.c  Zadanie_03.c  Zadanie_04.c  simulation_data.txt
07_Prednaska/: Zadanie_01  Zadanie_01.c  Zadanie_01.txt  Zadanie_02  Zadanie_02.c  Zadanie_02.txt  Zadanie_03  Zadanie_03.c  Zadanie_03.txt  graf.c  graf.h  stack.c  stack.h  vektor.c  vektor.h  vstup.txt  vstup_01.txt
Zaverecna_praca/: Gabri_Zaverecna_praca_2.c  Zadanie.txt  udaje.txt  vystup.txt
build-01_Prednaska-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
build-01_Prednaska-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-e72022804e2645e93bf5.json  cmakeFiles-v1-3cd2df54a6688e54bd6b.json  cmakeFiles-v1-ae2c9dc62eb82f196ded.json  (+12 more)
build-02_Prenaska-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-03_Prednaska-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
(+31 files in other folders)
